[tool.poetry]
name = "lambdada"
version = "0.1.0"
description = "functional utils for python"
authors = ["Alexandre Kempf <alexandre.kempf@cri-paris.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
cytoolz = "^0.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
